--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==1.11.6
 django-braces==1.11.0
 django-extensions==1.9.6
+djangorestframework==3.7.1
 ipython==5.5.0
 psycopg2==2.7.3.2
 pytz==2017.2
